# soma-inits-upgrades

./: .gitignore  Makefile  README.org  pyproject.toml
src/soma_inits_upgrades/: __main__.py  cli_helpers.py  clipboard.py  console.py  default_input.py  deps.py  deps_candidate_pool.py  deps_finders.py  deps_header_parsing.py  deps_parsing.py  deps_processing.py  deps_resolution.py  deps_selection.py  entry_changes.py  entry_retry.py  entry_retry_prompt.py  entry_tasks.py  entry_tasks_analysis.py  entry_tasks_dep_context.py  entry_tasks_diff.py  entry_tasks_graph.py  entry_tasks_llm.py  entry_tasks_monorepo.py  entry_tasks_ref.py  entry_tasks_report.py  entry_tasks_symbols.py  finalization.py  finalization_summary.py  git_cleanup.py  git_ops.py  git_ref_ops.py  graph.py  graph_entry.py  graph_inversion.py  graph_recovery.py  (+57 more)
stubs/: sexpdata.pyi  unidiff.pyi
tests/: conftest.py  e2e_bug_helpers.py  e2e_cli_wiring_helpers.py  e2e_data.py  e2e_helpers.py  e2e_resume_helpers.py  e2e_setup.py  exhausted_retry_helpers.py  fake_subprocess.py  fake_termios.py  fakes.py  fakes_rg.py  monorepo_test_helpers.py  multirepo_helpers.py  runner_helpers.py  runner_patch_helpers.py  selfheal_scan_test_helpers.py  selfheal_test_helpers.py  test_cleanup_tasks.py  test_cli.py  test_clipboard.py  test_collect_removed_lines.py  test_console.py  test_console_color.py  test_deps.py  test_deps_case_insensitive.py  test_deps_cross_ref.py  test_deps_locate.py  test_deps_locate_monorepo.py  test_deps_parsing.py  test_deps_processing.py  test_deps_resolution.py  test_deps_selection.py  test_deps_selection_pool.py  test_deps_selection_pool2.py  test_deps_selection_suggest.py  test_e2e.py  test_e2e_bug1_name_mismatch.py  test_e2e_bug2_monorepo.py  test_e2e_bug3_security_review.py  (+104 more)
