[project]
name = "soma-inits-upgrades"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "sexpdata>=1.0.2",
    "unidiff>=0.7.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.7",
]
