[project]
name = "soma-inits-upgrades"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "sexpdata>=1.0.2",
    "unidiff>=0.7.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.7",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "stubs"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"stubs/*.pyi" = ["N818"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
